# VisionCompare

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt
docs/: placeholder.txt
src/: __init__.py  main.py
src/components/: __init__.py  image_viewer.py  main_window.py
src/utils/: __init__.py
tests/: test_import.py
